--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-input-mask": "^2.0.4",
     "react-otp-input": "^3.0.4",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
@@ -62,10 +64,13 @@
     "@babel/preset-env": "^7.22.15",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.5.0",
     "axios-mock-adapter": "^1.22.0",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
-    "react-test-renderer": "^18.2.0"
+    "postcss": "^8.4.49",
+    "react-test-renderer": "^18.2.0",
+    "tailwindcss": "^3.4.15"
   }
 }
